Replaces `List.of` with `Arrays.asList` to grant legacy